--- a/view/book-details.html
+++ b/view/book-details.html
@@ -101,20 +101,20 @@
           <!-- სარჩევის დიზაინი არაა -->
           <div class="searching-section">
             <div class="each_content_line">
-              <p>თავი 1.</p>
-              <p>..........................................</p>
+              <p>თავი I</p>
+              <p>........................................................</p>
               <p>გვ.3</p>
             </div>
 
             <div class="each_content_line">
-              <p>თავი 2.</p>
-              <p>..........................................</p>
+              <p>თავი II</p>
+              <p>........................................................</p>
               <p>გვ.6</p>
             </div>
 
             <div class="each_content_line">
-              <p>თავი 3.</p>
-              <p>.........................................</p>
+              <p>თავი III</p>
+              <p>........................................................</p>
               <p>გვ.11</p>
             </div>
           </div>
@@ -152,88 +152,168 @@
       </section>
 
       <section class="similar-books">
-        <div class="similar-books-container">
+        <div class="similar-books-container main-content-wrapper">
           <h3>მსგავსი წიგნები</h3>
-          <div class="cards-wrapper">
-            <div class="card">
-              <img src="../assets/marx.png" alt="author photo" /> 
-            <div>
-              <h4>კარლ მარქსი</h4>
-              <p>გამომცემლობა</p>
-              <div>
-                <h4>კარლ მარქსი</h4>
-                <p>გამომცემლობა</p>
-                <div>
-                  <span>2024</span>
-                  <div>
-                    <img src="../assets/mdi_eye.svg" alt="seen icon" />
-                    <span>29</span>
+          <div class="books-section books-box">
+            <a href="./view/book-details.html">
+              <article class="card">
+                <img
+                  src="../assets/landing-page-cards/mepe-demetre-tavdadebuli.jpg"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <div class="book-views">
+                    <img src="../assets/mdi_eye.svg" alt="eye-icon" />
+                    <p>29</p>
+                  </div>
+
+                  <div class="title-share">
+                    <div class="title-share-default">
+                      <h2>მეფე დემეტრე თავდადებული</h2>
+                      <img src="../assets/share-icon.svg" alt="share-icon" />
+                    </div>
+                    <div class="title-share-hover">
+                      <p>გამომცემელი</p>
+                      <span>2024</span>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </div>
-            <div class="card">
-              <img src="../assets/jung.png" alt="author photo" />
-              <div>
-                <h4>კარლ გუსტავ იუნგი</h4>
-                <p>გამომცემლობა</p>
-                <div>
-                  <span>2024</span>
-                  <div>
-                    <img src="../assets/mdi_eye.svg" alt="seen icon" />
-                    <span>29</span>
+              </article>
+            </a>
+            <a href="./view/book-details.html">
+              <article class="card">
+                <img
+                  src="../assets/landing-page-cards/gandegili.jpg"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <div class="book-views">
+                    <img src="../assets/mdi_eye.svg" alt="eye-icon" />
+                    <p>29</p>
+                  </div>
+
+                  <div class="title-share">
+                    <div class="title-share-default">
+                      <h2>განდეგილი</h2>
+                      <img src="../assets/share-icon.svg" alt="share-icon" />
+                    </div>
+                    <div class="title-share-hover">
+                      <p>გამომცემელი</p>
+                      <span>2024</span>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </div>
-            <div class="card">
-              <img src="../assets/hobbes.png" alt="author photo" />
-              <div>
-                <h4>თომას ჰობსი</h4>
-                <p>გამომცემლობა</p>
-                <div>
-                  <span>2024</span>
-                  <div>
-                    <img src="../assets/mdi_eye.svg" alt="seen icon" />
-                    <span>29</span>
+              </article>
+            </a>
+            <a href="./view/book-details.html">
+              <article class="card">
+                <img
+                  src="../assets/landing-page-cards/mepe-demetre-tavdadebuli.jpg"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <div class="book-views">
+                    <img src="../assets/mdi_eye.svg" alt="eye-icon" />
+                    <p>29</p>
+                  </div>
+
+                  <div class="title-share">
+                    <div class="title-share-default">
+                      <h2>მეფე დემეტრე თავდადებული</h2>
+                      <img src="../assets/share-icon.svg" alt="share-icon" />
+                    </div>
+                    <div class="title-share-hover">
+                      <p>გამომცემელი</p>
+                      <span>2024</span>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </div>
-            <div class="card">
-              <img src="../assets/freud.png" alt="author photo" />
-              <div>
-                <h4>ზიგმუნდ ფროიდი</h4>
-                <p>გამომცემლობა</p>
-                <div>
-                  <span>2024</span>
-                  <div>
-                    <img src="../assets/mdi_eye.svg" alt="seen icon" />
-                    <span>29</span>
+              </article>
+            </a>
+            <a href="./view/book-details.html">
+              <article class="card">
+                <img
+                  src="../assets/landing-page-cards/ilia-chavchavadze.jpg"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <div class="book-views">
+                    <img src="../assets/mdi_eye.svg" alt="eye-icon" />
+                    <p>29</p>
+                  </div>
+
+                  <div class="title-share">
+                    <div class="title-share-default">
+                      <h2>კაკო ყაჩაღი</h2>
+                      <img src="../assets/share-icon.svg" alt="share-icon" />
+                    </div>
+                    <div class="title-share-hover">
+                      <p>გამომცემელი</p>
+                      <span>2024</span>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </div>
-            <div class="card">
-              <img src="../assets/Schrödinger.png" alt="author photo" />
-              <div>
-                <h4>ერვინ შროდინგერი</h4>
-                <p>გამომცემლობა</p>
-                <div>
-                  <span>2024</span>
-                  <div>
-                    <img src="../assets/mdi_eye.svg" alt="seen icon" />
-                    <span>29</span>
+              </article>
+            </a>
+            <a href="./view/book-details.html">
+              <article class="card">
+                <img
+                  src="../assets/landing-page-cards/poezia-targmanebi-werilebi.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <div class="book-views">
+                    <img src="../assets/mdi_eye.svg" alt="eye-icon" />
+                    <p>29</p>
+                  </div>
+
+                  <div class="title-share">
+                    <div class="title-share-default">
+                      <h2>კაკო ყაჩაღი</h2>
+                      <img src="../assets/share-icon.svg" alt="share-icon" />
+                    </div>
+                    <div class="title-share-hover">
+                      <p>გამომცემელი</p>
+                      <span>2024</span>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </div>
+              </article>
+            </a>
+            <a href="./view/book-details.html">
+              <article class="card">
+                <img
+                  src="../assets/landing-page-cards/leqsebi.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <div class="book-views">
+                    <img src="../assets/mdi_eye.svg" alt="eye-icon" />
+                    <p>29</p>
+                  </div>
+
+                  <div class="title-share">
+                    <div class="title-share-default">
+                      <h2>კაკო ყაჩაღი</h2>
+                      <img src="../assets/share-icon.svg" alt="share-icon" />
+                    </div>
+                    <div class="title-share-hover">
+                      <p>გამომცემელი</p>
+                      <span>2024</span>
+                    </div>
+                  </div>
+                </div>
+              </article>
+            </a>
+            
           </div>
         </div>
-        <ion-icon
-          class="icon-right icon"
-          name="chevron-forward-outline"
-        ></ion-icon>
       </section>
     </main>
 
@@ -284,6 +364,7 @@
     </footer>
 
     <!-- JavaScript link -->
+    <script src="../js/script.js"></script>
     <script src="../js/book-details.js"></script>
     <script
       type="module"
