--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -918,7 +918,6 @@ header .header_wrapper .burger_menu .line {
 .book-main {
   background-color: #f5f5f5;
   max-width: 1900px;
-  margin: auto;
 }
 .book-main .book-container {
   padding: 76px 6.2% 63px;
@@ -935,7 +934,7 @@ header .header_wrapper .burger_menu .line {
 .book-main .book-container .cover-wrapper img {
   width: 504px;
   height: 685px;
-  margin-bottom: 44px;
+  margin-bottom: 10px;
   border-radius: 20px;
 }
 .book-main .book-container .cover-wrapper a {
@@ -948,13 +947,7 @@ header .header_wrapper .burger_menu .line {
   border: none;
   cursor: pointer;
   font-family: "FiraGO400", sans-serif;
-  background-color: #0468dc;
-  padding: 17px 0;
-  text-align: center;
-  transition: background-color 0.3s;
-}
-.book-main .book-container .cover-wrapper a:hover {
-  background-color: #0077ff;
+  padding: 16px 116px;
 }
 .book-main .book-container .info-wrapper {
   display: flex;
@@ -965,25 +958,23 @@ header .header_wrapper .burger_menu .line {
   flex-direction: column;
 }
 .book-main .book-container .info-wrapper .main-info h3 {
-  margin-bottom: 28px;
+  margin-bottom: 16px;
   font-family: "FiraGO400", sans-serif;
   font-size: 36px;
-  line-height: 1.2;
-  font-weight: 700;
+  font-weight: 600;
   color: #333;
 }
 .book-main .book-container .info-wrapper .main-info p {
   margin-bottom: 40px;
   font-family: "FiraGO400", sans-serif;
-  font-size: 18px;
-  letter-spacing: 0.2px;
-  font-weight: 600;
-  color: rgba(60, 60, 67, 0.6);
+  font-size: 16px;
+  font-weight: 350;
+  color: #3C3C43;
 }
 .book-main .book-container .info-wrapper .main-info .book-info {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
 }
 .book-main .book-container .info-wrapper .main-info .book-info div {
   display: flex;
@@ -992,15 +983,15 @@ header .header_wrapper .burger_menu .line {
   gap: 16px;
 }
 .book-main .book-container .info-wrapper .main-info .book-info div img {
-  width: 20px;
-  height: 20px;
-  filter: opacity(50%);
+  width: 24px;
+  height: 24px;
+  filter: opacity(45%);
 }
 .book-main .book-container .info-wrapper .main-info .book-info div span {
   font-family: "FiraGO400", sans-serif;
   font-size: 16px;
-  font-weight: normal;
-  color: rgba(60, 60, 67, 0.6);
+  font-weight: 350;
+  color: #3c3c43;
 }
 .book-main .book-container .info-wrapper .button-wrapper {
   margin: 75px 0 24px;
@@ -1008,21 +999,33 @@ header .header_wrapper .burger_menu .line {
   flex-direction: row;
   align-items: center;
   gap: 46px;
+  /*#anotation {
+    color:#0468DC;
+    border-bottom: 3px solid #0468DC;
+  }*/
 }
 .book-main .book-container .info-wrapper .button-wrapper button {
-  transition: color 0.3s;
-  height: 40px;
-  /*@include chooseButton();*/
-  font-family: "FiraGO400", sans-serif;
-  color: #333;
-  font-size: 20px;
-  font-weight: 600;
+  background-color: red;
+  color: #000;
+  padding: 0 0 7px;
   border: none;
+  border-radius: 0;
+  font-family: "FiraGO";
+  font-size: 20px;
+  font-weight: 500;
+  border: none;
+  cursor: pointer;
   background-color: transparent;
+  font-size: 20px;
+  font-weight: 550;
+  color: #333;
 }
-.book-main .book-container .info-wrapper .button-wrapper button:hover {
-  color: #0468dc;
-  border-bottom: 3px solid #0468dc;
+.book-main .book-container .info-wrapper .button-wrapper button:active {
+  color: #112f91;
+}
+.book-main .book-container .info-wrapper .button-wrapper button:focus {
+  color: #112f91;
+  border-bottom: #112f91 solid 3px;
 }
 .book-main .book-container .info-wrapper .anotation-section {
   width: 100%;
@@ -1033,10 +1036,9 @@ header .header_wrapper .burger_menu .line {
   margin-bottom: 32px;
   font-family: "FiraGO400", sans-serif;
   font-size: 18px;
-  font-weight: normal;
+  font-weight: 350;
   line-height: 1.5;
   color: #333;
-  text-align: justify;
 }
 .book-main .book-container .info-wrapper .anotation-section div {
   display: flex;
@@ -1046,9 +1048,8 @@ header .header_wrapper .burger_menu .line {
 .book-main .book-container .info-wrapper .anotation-section div span {
   font-family: "FiraGO400", sans-serif;
   font-size: 16px;
-  font-weight: normal;
+  font-weight: 300;
   color: #333;
-  filter: opacity(70%);
 }
 .book-main .book-container .info-wrapper .feature-section ul {
   width: 100%;
@@ -1060,14 +1061,15 @@ header .header_wrapper .burger_menu .line {
   padding-bottom: 16px;
   border-bottom: 1px dashed #d0d0d0;
   font-family: "FiraGO400", sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  color: #333;
+  font-size: 24px;
+  font-weight: normal;
+  color: #000;
 }
 .book-main .book-container .info-wrapper .feature-section ul li:last-child {
   border-bottom: 0;
 }
 .book-main .book-container .info-wrapper .searching-section {
+  max-width: 1140px;
   margin-top: 40px;
 }
 .book-main .book-container .info-wrapper .searching-section .each_content_line {
@@ -1093,15 +1095,87 @@ header .header_wrapper .burger_menu .line {
   transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
   opacity: 0;
 }
+.book-main .book-container .info-wrapper .feature-section ul li {
+  font-size: 14px;
+  font-weight: 350;
+  color: #3c3c43;
+}
 .book-main .book-container .info-wrapper .open {
   max-height: 100%;
   opacity: 1;
 }
 .book-main .similar-books {
   margin-bottom: 179px;
-  /*padding: 36px 6.8%;*/
   background-color: #fff;
-  position: relative;
+  /*.cards-wrapper {
+    /*display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .card {
+      border-radius: 10px;
+      border: solid 1px #c2c2c2;
+      background-color: #fff;
+
+      img {
+        width: 275px;
+        height: 420px;
+      }
+      div {
+        padding: 16px;
+
+        h4 {
+          margin-bottom: 40px;
+          font-family: $font-family;
+          font-size: 20px;
+          font-weight: 500;
+          color: #000;
+        }
+
+        p {
+          margin-bottom: 22.5px;
+          font-family: $font-family;
+          font-size: 16px;
+          font-weight: normal;
+          color: #000;
+        }
+
+        div {
+          padding: 0;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+
+          span {
+            font-family: $font-family;
+            font-size: 16px;
+            font-weight: normal;
+            color: #000;
+          }
+
+          div {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 5;
+
+            img {
+              width: 22px;
+              height: 15px;
+            }
+
+            span {
+              font-family: $font-family;
+              font-size: 16px;
+              font-weight: bold;
+              color: #13297f;
+            }
+          }
+        }
+      }
+    }
+  }*/
 }
 .book-main .similar-books .similar-books-container {
   padding: 36px 6.8%;
@@ -1111,82 +1185,17 @@ header .header_wrapper .burger_menu .line {
   font-family: "FiraGO400", sans-serif;
   font-size: 36px;
   font-weight: 600;
-  color: #000;
+  color: #333;
 }
-.book-main .similar-books .icon {
-  font-size: 50px;
-  color: #0468dc;
-}
-.book-main .similar-books .icon-left {
-  position: absolute;
-  top: 50%;
-  left: 3%;
-}
-.book-main .similar-books .icon-right {
-  position: absolute;
-  top: 50%;
-  right: 3%;
-}
-.book-main .similar-books .cards-wrapper {
+.book-main .similar-books .books-box {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+  padding: 0 80px;
 }
-.book-main .similar-books .cards-wrapper .card {
-  border-radius: 10px;
-  border: solid 1px #c2c2c2;
-  background-color: #fff;
-}
-.book-main .similar-books .cards-wrapper .card img {
-  width: 275px;
-  height: 420px;
-}
-.book-main .similar-books .cards-wrapper .card div {
-  padding: 16px;
-}
-.book-main .similar-books .cards-wrapper .card div h4 {
-  margin-bottom: 40px;
-  font-family: "FiraGO400", sans-serif;
-  font-size: 20px;
-  font-weight: 500;
-  color: #000;
-}
-.book-main .similar-books .cards-wrapper .card div p {
-  margin-bottom: 22.5px;
-  font-family: "FiraGO400", sans-serif;
-  font-size: 16px;
-  font-weight: normal;
-  color: #000;
-}
-.book-main .similar-books .cards-wrapper .card div div {
-  padding: 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-.book-main .similar-books .cards-wrapper .card div div span {
-  font-family: "FiraGO400", sans-serif;
-  font-size: 16px;
-  font-weight: normal;
-  color: #000;
-}
-.book-main .similar-books .cards-wrapper .card div div div {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 5;
-}
-.book-main .similar-books .cards-wrapper .card div div div img {
-  width: 22px;
-  height: 15px;
-}
-.book-main .similar-books .cards-wrapper .card div div div span {
-  font-family: "FiraGO400", sans-serif;
-  font-size: 16px;
-  font-weight: bold;
-  color: #13297f;
+.book-main .similar-books .books-box .book-cover {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .about-project-header a {
