--- a/styles/page/_book-details.scss
+++ b/styles/page/_book-details.scss
@@ -1,7 +1,6 @@
 .book-main {
   background-color: #f5f5f5;
   max-width: 1900px;
-  margin: auto;
 
   .book-container {
     padding: 76px 6.2% 63px;
@@ -18,22 +17,16 @@
       img {
         width: 504px;
         height: 685px;
-        margin-bottom: 44px;
+        margin-bottom: 10px;
         border-radius: 20px;
       }
 
       a {
         @include Bookbutton();
         font-family: $font-family;
-        background-color: #0468dc;
-        padding: 17px 0;
-        text-align: center;
-        transition: background-color 0.3s;
+        padding: 16px 116px;
       }
 
-      a:hover {
-        background-color: #0077ff;
-      }
     }
 
     .info-wrapper {
@@ -45,27 +38,25 @@
         flex-direction: column;
 
         h3 {
-          margin-bottom: 28px;
+          margin-bottom: 16px;
           font-family: $font-family;
           font-size: 36px;
-          line-height: 1.2;
-          font-weight: 700;
+          font-weight: 600;
           color: #333;
         }
 
         p {
           margin-bottom: 40px;
           font-family: $font-family;
-          font-size: 18px;
-          letter-spacing: 0.2px;
-          font-weight: 600;
-          color: #3c3c4399;
+          font-size: 16px;
+          font-weight: 350;
+          color: #3C3C43;
         }
 
         .book-info {
           display: flex;
           flex-direction: column;
-          gap: 20px;
+          gap: 10px;
 
           div {
             display: flex;
@@ -74,16 +65,16 @@
             gap: 16px;
 
             img {
-              width: 20px;
-              height: 20px;
-              filter: opacity(50%);
+              width: 24px;
+              height: 24px;
+              filter:opacity(45%);
             }
 
             span {
               font-family: $font-family;
               font-size: 16px;
-              font-weight: normal;
-              color: #3c3c4399;
+              font-weight: 350;
+              color: #3c3c43;
             }
           }
         }
@@ -95,23 +86,20 @@
         align-items: center;
         gap: 46px;
 
-        button {
-          transition: color 0.3s;
-          height: 40px;
-          /*@include chooseButton();*/
-          font-family: $font-family;
-          color: #333;
-          font-size: 20px;
-          font-weight: 600;
-          border: none;
-          background-color: transparent;
-        }
+        /*#anotation {
+          color:#0468DC;
+          border-bottom: 3px solid #0468DC;
+        }*/
 
-        button:hover {
-          color: #0468dc;
-          border-bottom: 3px solid #0468dc;
+        button {
+          @include chooseButton();
+          background-color: transparent;
+          font-size:20px;
+          font-weight:550;
+          color:#333;
         }
       }
+
       .anotation-section {
         width: 100%;
         display: flex;
@@ -121,10 +109,9 @@
           margin-bottom: 32px;
           font-family: $font-family;
           font-size: 18px;
-          font-weight: normal;
+          font-weight: 350;
           line-height: 1.5;
           color: #333;
-          text-align: justify;
         }
 
         div {
@@ -135,9 +122,8 @@
           span {
             font-family: $font-family;
             font-size: 16px;
-            font-weight: normal;
+            font-weight: 300;
             color: #333;
-            filter: opacity(70%);
           }
         }
       }
@@ -153,9 +139,9 @@
             padding-bottom: 16px;
             border-bottom: 1px dashed #d0d0d0;
             font-family: $font-family;
-            font-size: 18px;
-            font-weight: 400;
-            color: #333;
+            font-size: 24px;
+            font-weight: normal;
+            color: #000;
 
             &:last-child {
               border-bottom: 0;
@@ -165,6 +151,8 @@
       }
 
       .searching-section {
+        max-width: 1140px;
+
         margin-top: 40px;
 
         .each_content_line {
@@ -195,6 +183,18 @@
         opacity: 0;
       }
 
+      .feature-section {
+
+        ul{
+
+          li {
+            font-size:14px;
+            font-weight:350;
+            color:#3c3c43;
+          }
+        }
+      }
+
       .open {
         max-height: 100%;
         opacity: 1;
@@ -204,9 +204,7 @@
 
   .similar-books {
     margin-bottom: 179px;
-    /*padding: 36px 6.8%;*/
     background-color: #fff;
-    position: relative;
 
     .similar-books-container {
       padding: 36px 6.8%;
@@ -217,26 +215,25 @@
       font-family: $font-family;
       font-size: 36px;
       font-weight: 600;
-      color: #000;
-    }
-    .icon {
-      font-size: 50px;
-      color: #0468dc;
-    }
-    .icon-left {
-      position: absolute;
-      top: 50%;
-      left: 3%;
-    }
-    .icon-right {
-      position: absolute;
-      top: 50%;
-      right: 3%;
+      color: #333;
     }
 
-    .cards-wrapper {
-      display: flex;
-      flex-direction: row;
+    .books-box{
+      display:flex;
+      padding: 0 80px;
+
+
+      .book-cover{
+        width: 100%;
+        height: auto;
+        -o-object-fit: cover;
+        object-fit: cover;
+      }
+    
+    }
+
+    /*.cards-wrapper {
+      /*display: flex;
       align-items: center;
       justify-content: space-between;
 
@@ -303,6 +300,6 @@
           }
         }
       }
-    }
+    }*/
   }
 }
