--- a/view/book-details.html
+++ b/view/book-details.html
@@ -43,9 +43,12 @@
     <!-- Main content -->
 
     <main class="book-main">
-      <section class="book-container">
+      <section class="book-container container">
         <div class="cover-wrapper">
-          <img src="../assets/landing-page-cards/motkhrobebi.jpg" alt="book cover image" />
+          <img
+            src="../assets/landing-page-cards/gandegili.jpg"
+            alt="book cover image"
+          />
           <a href="flip-page.html">წაკითხვა (PDF)</a>
         </div>
         <div class="info-wrapper">
@@ -66,7 +69,7 @@
                   src="../assets/book-check-icon.svg"
                   alt="book check icon"
                 />
-                <span>გამომცემლობა:  საბჭოთა მწერალი</span>
+                <span>გამომცემლობა: საბჭოთა მწერალი</span>
               </div>
             </div>
           </div>
@@ -102,19 +105,31 @@
           <div class="searching-section">
             <div class="each_content_line">
               <p>თავი I</p>
-              <p>........................................................</p>
+              <p class="dotted-line">
+                <span>
+                  ........................................................
+                </span>
+              </p>
               <p>გვ.3</p>
             </div>
 
             <div class="each_content_line">
               <p>თავი II</p>
-              <p>........................................................</p>
+              <p class="dotted-line">
+                <span>
+                  ........................................................
+                </span>
+              </p>
               <p>გვ.6</p>
             </div>
 
             <div class="each_content_line">
               <p>თავი III</p>
-              <p>........................................................</p>
+              <p class="dotted-line">
+                <span>
+                  ........................................................
+                </span>
+              </p>
               <p>გვ.11</p>
             </div>
           </div>
@@ -155,7 +170,7 @@
         <div class="similar-books-container main-content-wrapper">
           <h3>მსგავსი წიგნები</h3>
           <div class="books-section books-box">
-            <a href="./view/book-details.html">
+            <a href="#">
               <article class="card">
                 <img
                   src="../assets/landing-page-cards/mepe-demetre-tavdadebuli.jpg"
@@ -181,7 +196,7 @@
                 </div>
               </article>
             </a>
-            <a href="./view/book-details.html">
+            <a href="#">
               <article class="card">
                 <img
                   src="../assets/landing-page-cards/gandegili.jpg"
@@ -207,7 +222,7 @@
                 </div>
               </article>
             </a>
-            <a href="./view/book-details.html">
+            <a href="#">
               <article class="card">
                 <img
                   src="../assets/landing-page-cards/mepe-demetre-tavdadebuli.jpg"
@@ -233,7 +248,7 @@
                 </div>
               </article>
             </a>
-            <a href="./view/book-details.html">
+            <a href="#">
               <article class="card">
                 <img
                   src="../assets/landing-page-cards/ilia-chavchavadze.jpg"
@@ -259,7 +274,7 @@
                 </div>
               </article>
             </a>
-            <a href="./view/book-details.html">
+            <a href="#">
               <article class="card">
                 <img
                   src="../assets/landing-page-cards/poezia-targmanebi-werilebi.png"
@@ -285,7 +300,7 @@
                 </div>
               </article>
             </a>
-            <a href="./view/book-details.html">
+            <a href="#">
               <article class="card">
                 <img
                   src="../assets/landing-page-cards/leqsebi.png"
@@ -311,7 +326,6 @@
                 </div>
               </article>
             </a>
-            
           </div>
         </div>
       </section>
