--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -1,3 +1,5 @@
+$header-blue: #0468dc;
+
 .footer-main-info {
   background-color: $header-background;
   color: white;
@@ -6,7 +8,9 @@
   line-height: 21.6px;
 
   .container {
-    padding: 88px 0;
+    // padding: 88px 0;
+    padding: 46px 0;
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -15,7 +19,27 @@
       display: flex;
       flex-direction: column;
 
+      gap: 40px;
+      h2 {
+        @include text_font_style(#fff, FiraGo700, 22px, 700);
+      }
+
       .contacts-wrapper {
+        a {
+          margin-bottom: 16px;
+
+          @include flex(flex-start);
+          gap: 20px;
+          @include text_font_style(#fff, inherit, 16px, 400);
+          font-family: Firago400;
+          line-height: 26px;
+
+          img {
+            height: 40px;
+            width: 40px;
+            aspect-ratio: 1;
+          }
+        }
         .contacts {
           display: flex;
           flex-direction: row;
@@ -42,6 +66,14 @@
           flex-direction: row;
           justify-content: space-around;
         }
+
+        li:nth-of-type(2),
+        li:nth-of-type(4) {
+          text-decoration: underline;
+        }
+        li:last-child a {
+          margin-bottom: 0;
+        }
       }
     }
 
@@ -50,6 +82,9 @@
       flex-direction: column;
       gap: 40px;
 
+      & > a:first-of-type {
+        @include text_font_style(#fff, FiraGo700, 22px, 700);
+      }
       a {
         color: white;
         cursor: pointer;
@@ -104,8 +139,15 @@
 }
 
 .footer-additional-info {
-  background-color: #064aa2;
+  background-color: $header-blue;
+
+  // background-color: #064aa2;
   color: white;
+
+  & > aside p {
+    @include text_font_style(#fff, FiraGo300, 12px, 300);
+    padding: 30px 0;
+  }
 
   .container {
     display: flex;
