--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -810,7 +810,7 @@ header .header_wrapper .burger_menu .line {
   line-height: 21.6px;
 }
 .footer-main-info .container {
-  padding: 88px 0;
+  padding: 46px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -818,6 +818,33 @@ header .header_wrapper .burger_menu .line {
 .footer-main-info .container .contacts-container {
   display: flex;
   flex-direction: column;
+  gap: 40px;
+}
+.footer-main-info .container .contacts-container h2 {
+  color: #fff;
+  font-family: FiraGo700;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: normal;
+}
+.footer-main-info .container .contacts-container .contacts-wrapper a {
+  margin-bottom: 16px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+  color: #fff;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+  font-family: Firago400;
+  line-height: 26px;
+}
+.footer-main-info .container .contacts-container .contacts-wrapper a img {
+  height: 40px;
+  width: 40px;
+  aspect-ratio: 1;
 }
 .footer-main-info .container .contacts-container .contacts-wrapper .contacts {
   display: flex;
@@ -844,10 +871,24 @@ header .header_wrapper .burger_menu .line {
     justify-content: space-around;
   }
 }
+.footer-main-info .container .contacts-container .contacts-wrapper li:nth-of-type(2),
+.footer-main-info .container .contacts-container .contacts-wrapper li:nth-of-type(4) {
+  text-decoration: underline;
+}
+.footer-main-info .container .contacts-container .contacts-wrapper li:last-child a {
+  margin-bottom: 0;
+}
 .footer-main-info .container .usage-container {
   display: flex;
   flex-direction: column;
   gap: 40px;
+}
+.footer-main-info .container .usage-container > a:first-of-type {
+  color: #fff;
+  font-family: FiraGo700;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: normal;
 }
 .footer-main-info .container .usage-container a {
   color: white;
@@ -900,8 +941,16 @@ header .header_wrapper .burger_menu .line {
 }
 
 .footer-additional-info {
-  background-color: #064aa2;
+  background-color: #0468dc;
   color: white;
+}
+.footer-additional-info > aside p {
+  color: #fff;
+  font-family: FiraGo300;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: normal;
+  padding: 30px 0;
 }
 .footer-additional-info .container {
   display: flex;
@@ -1313,71 +1362,6 @@ header .header_wrapper .burger_menu .line {
   height: 288px;
   border-radius: 10px;
   border: 2px solid #0468dc;
-}
-
-.about-project-footer .contacts-container {
-  gap: 40px;
-}
-.about-project-footer .contacts-container h2 {
-  color: #fff;
-  font-family: FiraGo700;
-  font-size: 22px;
-  font-weight: 700;
-  line-height: normal;
-}
-.about-project-footer .contacts-wrapper a {
-  margin-bottom: 16px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 20px;
-  color: #fff;
-  font-family: inherit;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: normal;
-  font-family: Firago400;
-  line-height: 26px;
-}
-.about-project-footer .contacts-wrapper a img {
-  height: 40px;
-  width: 40px;
-  aspect-ratio: 1;
-}
-.about-project-footer .contacts-wrapper li:nth-of-type(2),
-.about-project-footer .contacts-wrapper li:nth-of-type(4) {
-  text-decoration: underline;
-}
-.about-project-footer .contacts-wrapper li:last-child a {
-  margin-bottom: 0;
-}
-.about-project-footer .usage-container > a:first-of-type {
-  color: #fff;
-  font-family: FiraGo700;
-  font-size: 22px;
-  font-weight: 700;
-  line-height: normal;
-}
-.about-project-footer .usage-container > a:last-of-type {
-  color: #fff;
-  font-family: FiraGo400;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: normal;
-}
-.about-project-footer .footer-main-info .container {
-  padding: 46px 0;
-}
-.about-project-footer .footer-additional-info {
-  background-color: #0468dc;
-}
-.about-project-footer .footer-additional-info > aside p {
-  color: #fff;
-  font-family: FiraGo300;
-  font-size: 12px;
-  font-weight: 300;
-  line-height: normal;
-  padding: 30px 0;
 }
 
 body {
