--- a/styles/page/_book-details.scss
+++ b/styles/page/_book-details.scss
@@ -49,7 +49,8 @@
       display: flex;
       flex-direction: column;
       //
-      overflow-x: scroll;
+      // overflow-x: scroll;
+      overflow: auto;
       //
       .main-info {
         display: flex;
@@ -158,7 +159,7 @@
           gap: 18px;
 
           li {
-            padding-bottom: 16px;
+            padding-bottom: 8px;
             border-bottom: 1px dashed #d0d0d0;
             font-family: $font-family;
             font-size: 24px;
@@ -244,7 +245,8 @@
     .books-box {
       display: flex;
       justify-content: space-between;
-      overflow-x: scroll;
+      // overflow-x: scroll;
+      overflow: auto;
 
       .book-cover {
         width: 100%;
