--- a/view/flip-page.html
+++ b/view/flip-page.html
@@ -28,10 +28,10 @@
             <nav>
               <ul>
                 <li>
-                  <a href="./index.html" class="active-header">მთავარი</a>
+                  <a href="../index.html">მთავარი</a>
                 </li>
                 <li>
-                  <a href="./view/about-project.html">პროექტის შესახებ</a>
+                  <a href="about-project.html">პროექტის შესახებ</a>
                 </li>
               </ul>
             </nav>
@@ -50,7 +50,7 @@
     <header class="flip-page-header" id="flip-page-header">
       <div class="flip-page-header-container container">
         <a href="./book-details.html">
-          <img src="../assets/flip-page/Vector.png" alt="გადადით უკან" />
+          <img src="../assets/flip-page/back.svg" alt="გადადით უკან" />
         </a>
 
         <div id="flip-pages">
@@ -97,7 +97,7 @@
     </header>
 
     <main id="main">
-      <p class="main-chapter" id="main-chapter">განდეგილი - თავი I</p>
+      <p class="main-chapter" id="main-chapter">განდეგილი - დასაწყისი</p>
       <section id="main-content">
         <div id="pdf-container"></div>
       </section>
