update flip-page v2
1.adding background color
2.changing back, download and burger images

--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -1409,7 +1409,7 @@ body {
 }
 .main-body-container main {
   flex: 1;
-  background-color: white;
+  background-color: #EDF6FB;
 }
 
 .flip-page-header {
