--- a/view/flip-page.html
+++ b/view/flip-page.html
@@ -51,7 +51,7 @@
     <header class="flip-page-header" id="flip-page-header">
       <div class="flip-page-header-container container">
         <a href="./book-details.html">
-          <img src="../assets/flip-page/Vector.png" alt="გადადით უკან" />
+          <img src="../assets/flip-page/back.png" alt="გადადით უკან" />
         </a>
 
         <div id="flip-pages">
@@ -79,7 +79,7 @@
         <div class="flip-navbar-right">
           <!-- <p class="main-chapter" id="main-chapter">განდეგილი - თავი I</p> -->
           <div id="menu" style="cursor: pointer">
-            <img src="../assets/flip-page/burger-menu.png" alt="ჩამონათვალი" />
+            <img src="../assets/flip-page/iconamoon_menu-burger-horizontal-bold.png" alt="ჩამონათვალი" />
           </div>
 
           <a
@@ -98,7 +98,7 @@
     </header>
 
     <main id="main">
-      <p class="main-chapter" id="main-chapter">განდეგილი - თავი I</p>
+      <p class="main-chapter" id="main-chapter">განდეგილი - დასაწყისი</p>
       <section id="main-content">
         <div id="pdf-container"></div>
       </section>
