--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -1406,8 +1406,22 @@ body {
   background-color: white;
 }
 
+.flip-page-main {
+  background-color: #edf6fb !important;
+}
+
+a#menu .svg-path {
+  fill: rgba(255, 255, 255, 0.3764705882);
+  transition: fill 0.3s ease;
+}
+a#menu .svg-path:hover {
+  fill: white;
+}
+a#menu:hover .svg-path {
+  fill: #ffffff;
+}
+
 .flip-page-header {
-  padding: 23px 161px 23px 120px;
   background-color: #0077ff;
   color: white;
 }
@@ -1420,7 +1434,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 110px;
+  gap: 99px;
   cursor: pointer;
 }
 .flip-page-header .flip-page-header-container .flip-navbar-right #main-chapter {
@@ -1432,6 +1446,12 @@ body {
   font-family: FiraGo400;
   font-size: 24px;
 }
+.flip-page-header .flip-page-header-container .flip-navbar-right .svg-path {
+  transition: fill 0.3s ease;
+}
+.flip-page-header .flip-page-header-container .flip-navbar-right .svg-path {
+  fill: #ffffff;
+}
 .flip-page-header .flip-page-header-container .menu-ul {
   background-color: white;
   color: black;
@@ -1441,6 +1461,8 @@ body {
   border: 1px solid #333333;
   overflow: hidden;
   z-index: 100;
+  max-height: 300px;
+  overflow-y: auto;
 }
 .flip-page-header .flip-page-header-container .menu-li {
   font-family: FiraGo400;
@@ -1520,7 +1542,7 @@ body {
   align-items: center;
   gap: 32px;
   flex: 1;
-  background-color: white;
+  background-color: #edf6fb;
 }
 #loader img {
   width: 200px;
