--- a/styles/page/_flip-page.scss
+++ b/styles/page/_flip-page.scss
@@ -9,9 +9,29 @@
     background-color: white;
   }
 }
+.flip-page-main {
+  background-color: #edf6fb !important;
+}
+
+a#menu {
+  .svg-path {
+    fill: #ffffff60;
+    transition: fill 0.3s ease;
+
+    // Change fill color on hover
+    &:hover {
+      fill: white;
+    }
+  }
+
+  &:hover {
+    .svg-path {
+      fill: #ffffff;
+    }
+  }
+}
 
 .flip-page-header {
-  padding: 23px 161px 23px 120px;
   background-color: #0077ff;
   color: white;
 
@@ -23,7 +43,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 110px;
+      gap: 99px;
       cursor: pointer;
       #main-chapter {
         text-align: center;
@@ -33,6 +53,13 @@
       p {
         font-family: FiraGo400;
         font-size: 24px;
+      }
+
+      .svg-path {
+        transition: fill 0.3s ease;
+      }
+      .svg-path {
+        fill: #ffffff;
       }
     }
 
@@ -45,6 +72,8 @@
       border: 1px solid #333333;
       overflow: hidden;
       z-index: 100;
+      max-height: 300px; // Adjust the height as needed
+      overflow-y: auto;
     }
     .menu-li {
       font-family: FiraGo400;
@@ -77,6 +106,7 @@
     }
   }
 }
+
 .over-hidden {
   overflow: hidden;
 }
@@ -130,7 +160,7 @@
   align-items: center;
   gap: 32px;
   flex: 1;
-  background-color: white;
+  background-color: #edf6fb;
 
   img {
     width: 200px;
