--- a/view/flip-page.html
+++ b/view/flip-page.html
@@ -11,14 +11,14 @@
     <!-- pdfjs-lib cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
   </head>
-  <body class="main-body-container" id="body">
+  <body class="flip-body-container" id="body">
     <!-- main header -->
     <header id="main-header">
       <div class="container header_wrapper">
         <div class="header_components">
           <!-- Logo -->
           <div class="logo">
-            <a href="index.html"
+            <a href="../index.html"
               ><img src="../assets/index.html/logo.svg" alt="logo"
             /></a>
           </div>
@@ -106,7 +106,7 @@
     </header>
 
     <main id="main" class="flip-page-main">
-      <p class="main-chapter" id="main-chapter">განდეგილი - დასაწყისი</p>
+      <p class="main-chapter" id="main-chapter">დასაწყისი</p>
       <section id="main-content">
         <div id="pdf-container"></div>
       </section>
