--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -3,6 +3,15 @@ body {
   font-family: "FiraGO400", Helvetica, sans-serif !important;
 }
 
+.landing-page {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  main {
+    flex: 1;
+  }
+}
+
 .container {
   max-width: 1680px;
   width: 100%;
