--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -224,6 +224,15 @@ body {
   font-family: "FiraGO400", Helvetica, sans-serif !important;
 }
 
+.landing-page {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.landing-page main {
+  flex: 1;
+}
+
 .container {
   max-width: 1680px;
   width: 100%;
@@ -969,6 +978,15 @@ header .header_wrapper .burger_menu .line {
   overflow: hidden;
 }
 
+.book-details-body-container {
+  min-height: 100dvh;
+  display: flex;
+  flex-direction: column;
+}
+.book-details-body-container main {
+  flex: 1;
+}
+
 .book-main {
   background-color: #f5f5f5;
 }
@@ -1122,6 +1140,7 @@ header .header_wrapper .burger_menu .line {
   gap: 16px;
 }
 .book-main .book-container .info-wrapper .searching-section .each_content_line p {
+  min-width: 100px;
   margin-bottom: 34px;
   font-family: "FiraGO400", sans-serif;
   font-size: 18px;
@@ -1395,13 +1414,13 @@ body {
           text-decoration-skip-ink: none;
 }
 
-.main-body-container {
+.flip-body-container {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   font-family: FiraGo;
 }
-.main-body-container main {
+.flip-body-container main {
   flex: 1;
   background-color: white;
 }
@@ -1431,6 +1450,7 @@ a#menu:hover .svg-path {
   align-items: center;
 }
 .flip-page-header .flip-page-header-container .flip-navbar-right {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1456,12 +1476,13 @@ a#menu:hover .svg-path {
   background-color: white;
   color: black;
   position: absolute;
-  top: 96px;
+  top: 69px;
+  right: 45px;
   border-radius: 10px;
   border: 1px solid #333333;
   overflow: hidden;
   z-index: 100;
-  max-height: 300px;
+  max-height: 500px;
   overflow-y: auto;
 }
 .flip-page-header .flip-page-header-container .menu-li {
