--- a/styles/page/_book-details.scss
+++ b/styles/page/_book-details.scss
@@ -3,6 +3,15 @@
   overflow: hidden;
 }
 
+.book-details-body-container {
+  min-height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  main {
+    flex: 1;
+  }
+}
+
 .book-main {
   background-color: #f5f5f5;
 
@@ -183,6 +192,7 @@
           gap: 16px;
 
           p {
+            min-width: 100px;
             margin-bottom: 34px;
             font-family: $font-family;
             font-size: 18px;
