--- a/view/book-details.html
+++ b/view/book-details.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../styles/css/global.css" />
     <link rel="stylesheet" href="../styles/page/_book-details.scss" />
   </head>
-  <body>
+  <body class="book-details-body-container">
     <!-- Header -->
     <header>
       <div class="container header_wrapper">
@@ -106,9 +106,9 @@
             <div class="each_content_line">
               <p>თავი I</p>
               <p class="dotted-line">
-                <span>
-                  ........................................................
-                </span>
+                <span
+                  >........................................................</span
+                >
               </p>
               <p>გვ.3</p>
             </div>
@@ -116,21 +116,248 @@
             <div class="each_content_line">
               <p>თავი II</p>
               <p class="dotted-line">
-                <span>
-                  ........................................................
-                </span>
+                <span
+                  >........................................................</span
+                >
               </p>
-              <p>გვ.6</p>
+              <p>გვ.3</p>
             </div>
 
             <div class="each_content_line">
               <p>თავი III</p>
               <p class="dotted-line">
-                <span>
-                  ........................................................
-                </span>
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.4</p>
+            </div>
+
+            <!-- Hard-coded divs for chapters 4 to 28 -->
+            <div class="each_content_line">
+              <p>თავი IV</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.5</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი V</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.5</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი VI</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.6</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი VII</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.7</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი VIII</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.7</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი IX</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.8</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი X</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.9</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XI</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.9</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XII</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.10</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XIII</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.10</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XIV</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
               </p>
               <p>გვ.11</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XV</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.12</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XVI</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.12</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XVII</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.13</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XVIII</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.14</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XIX</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.14</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XX</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.15</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XXI</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.16</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XXII</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.16</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XXIII</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.17</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XXIV</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.17</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XXV</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.18</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XXVI</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.19</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XXVII</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.19</p>
+            </div>
+            <div class="each_content_line">
+              <p>თავი XXVIII</p>
+              <p class="dotted-line">
+                <span
+                  >........................................................</span
+                >
+              </p>
+              <p>გვ.20</p>
             </div>
           </div>
 
@@ -167,9 +394,9 @@
       </section>
 
       <section class="similar-books">
-        <div class="similar-books-container main-content-wrapper">
+        <div class="main-content-wrapper similar-books-container">
           <h3>მსგავსი წიგნები</h3>
-          <div class="books-section books-box">
+          <div class="books-box books-section">
             <a href="#">
               <article class="card">
                 <img
