--- a/view/about-project.html
+++ b/view/about-project.html
@@ -20,7 +20,7 @@
   </head>
   <body class="a-b">
     <header class="about-project-header">
-      <div class="header_wrapper container">
+      <div class="container header_wrapper">
         <div class="header_components">
           <!-- Logo -->
           <div class="logo">
