--- a/view/book-details.html
+++ b/view/book-details.html
@@ -91,13 +91,11 @@
               ილია ჭავჭავაძის რესურსებთან.
             </p>
             <div>
-              <span> © ილიას სახელმწიფო უნივერსიტეტის </span>
-              <span> Ilia State University Library</span>
-              <span> გ.წერეთლის აღმოსვლეთმცოდნეობის ინსტიტუტი </span>
               <span>
-                G.Tsereteli Institute of Oriental Studies of the Ilia State
-                University
+                &copy; ააიპ ილიას სახელმწიფო უნივერსიტეტის ბიბლიოთეკა
               </span>
+              <span> Ilia State University Library </span>
+              <span> გ.წერეთლის აღმოსვლეთმცოდნეობის ინსტიტუტი </span>
             </div>
           </div>
 
