footer is up to date on all pages

--- a/view/about-project.html
+++ b/view/about-project.html
@@ -234,10 +234,18 @@
           </div>
           <div class="unilab-team-container">
             <div class="logo-container">
-              <a href="https://iliauni.edu.ge/ge">
+              <a
+                href="https://iliauni.edu.ge/ge"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <img src="../assets/iliauni-logo.svg" alt="iliauni-logo"
               /></a>
-              <a href="https://unilab.iliauni.edu.ge/">
+              <a
+                href="https://unilab.iliauni.edu.ge/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <img src="../assets/unilab-logo.svg" alt="unilab-logo"
               /></a>
             </div>
