--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -363,34 +363,21 @@ body {
   border-radius: 15px;
 }
 .main-content-wrapper .filter-books-wrapper .clean-filters {
-  cursor: pointer;
   display: flex;
   justify-content: flex-end;
   gap: 10px;
-  margin: 11px 0 19px;
+  margin: 11px 0 24px;
+}
+.main-content-wrapper .filter-books-wrapper .clean-filters button {
+  display: flex;
+  gap: 10px;
+  background-color: transparent;
+  border: none;
 }
 .main-content-wrapper .filter-books-wrapper .clean-filters .clean-filters-text {
   color: rgba(60, 60, 67, 0.6);
   font-family: FiraGo600;
-  font-size: 1rem;
-}
-.main-content-wrapper .filter-books-wrapper .dropdownUnderline {
-  width: 100%;
-  height: 2px;
-  background-color: #d8ebfc;
-  border-radius: 2px;
-}
-.main-content-wrapper .filter-books-wrapper .clean-filters {
-  cursor: pointer;
-  display: flex;
-  justify-content: flex-end;
-  gap: 10px;
-  margin: 11px 0 19px;
-}
-.main-content-wrapper .filter-books-wrapper .clean-filters .clean-filters-text {
-  color: rgba(60, 60, 67, 0.6);
-  font-family: FiraGo600;
-  font-size: 1rem;
+  font-size: 16px;
 }
 .main-content-wrapper .filter-books-wrapper .dropdownUnderline {
   width: 100%;
@@ -408,10 +395,11 @@ body {
   flex-direction: column;
   gap: 15px;
 }
-.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper h2 {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper legend {
   color: #333333;
   font-size: 24px;
   font-family: FiraGo700;
+  margin-bottom: 16px;
 }
 .main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .dropdown {
   display: flex;
