--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -258,6 +258,12 @@ body {
   display: flex;
   flex-direction: row;
   gap: 70px;
+  justify-items: center;
+}
+@media (max-width: 1440px) {
+  .main-content-wrapper .filter-books-wrapper {
+    gap: 131px;
+  }
 }
 .main-content-wrapper .filter-books-wrapper .filter-section {
   max-width: 402px;
@@ -266,6 +272,11 @@ body {
 @media (max-width: 1040px) {
   .main-content-wrapper .filter-books-wrapper .filter-section {
     display: none;
+  }
+}
+@media (max-width: 1440px) {
+  .main-content-wrapper .filter-books-wrapper .filter-section {
+    width: 298px;
   }
 }
 .main-content-wrapper .filter-books-wrapper .filter-section .buttons-section {
@@ -471,10 +482,11 @@ body {
   position: relative;
   border: 1px solid rgba(60, 60, 67, 0.6);
   border-radius: 8px;
-  width: 170px;
+  max-width: 170px;
   height: 54px;
   padding: 17px 16px;
   cursor: pointer;
+  min-width: 102px;
 }
 .main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label {
   display: flex;
@@ -533,6 +545,13 @@ body {
 @media only screen and (max-width: 820px) {
   .main-content-wrapper .books-section {
     grid-template-columns: repeat(1, 1fr);
+  }
+}
+@media (max-width: 1440px) {
+  .main-content-wrapper .books-section {
+    max-width: 835px;
+    -moz-column-gap: 27.5px;
+         column-gap: 27.5px;
   }
 }
 .main-content-wrapper .books-section .card {
