iframe responsive bugfix

--- a/styles/page/_about-project.scss
+++ b/styles/page/_about-project.scss
@@ -68,17 +68,17 @@ $text-color: #333333;
     margin-bottom: 74px;
 
     & > div {
-      display: grid;
-      grid-template-columns: auto 1fr;
-      gap: 154px;
-
-      // grid-template-columns: 3fr 7fr;
+      display: flex;
+      // gap: 154px;
+      gap: 70px;
+      justify-content: space-between;
 
       & > div {
         @include flex(space-between, center);
         flex-direction: column;
         gap: 56px;
 
+        min-width: 415px;
         > h2 {
           margin-bottom: 0;
         }
@@ -111,7 +111,13 @@ $text-color: #333333;
       }
 
       .iframe-div {
-        display: flex;
+        // flex: 1;
+        width: 100%;
+        max-width: 1111px;
+
+        @include responsive(pc) {
+          max-width: 727px;
+        }
       }
 
       iframe {
