--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -140,7 +140,7 @@ $header-blue: #0468dc;
 }
 
 .footer-additional-info {
-  background-color: $header-blue;
+  background-color: $main-green-color;
 
   // background-color: #064aa2;
   color: white;
