--- a/styles/utils/_mixins.scss
+++ b/styles/utils/_mixins.scss
@@ -126,7 +126,7 @@ $pc-max: $pc - 1;
 //search and readPDF blue buttons
 
 @mixin searchReadButton(
-  $bg-color: $main-blue-color,
+  $bg-color: $main-green-color,
   $color: #ffffff,
   $border-radius: 10px,
   $border: none,
