--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -2,12 +2,12 @@
 $font-family: "FiraGO400", sans-serif;
 
 // colors
-$header-background: #0077ff;
+$header-background: #a6bd9e;
 $nav-element-color: #ffffff60;
 $nav-element-color-active: #ffffff;
 $dark-blue-color: #022859;
 $body-background-color: #f5f5f5;
-$main-blue-color: #0468dc;
+$main-green-color: #95b48a;
 $card-title: #333333;
 
 // resolution
