--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -102,7 +102,7 @@ body {
         .dropdown-button {
           width: 100%;
           height: 59px;
-          border: 2px solid $main-blue-color;
+          border: 2px solid $main-green-color;
           border-radius: 10px;
           background-color: #ffffff;
           display: flex;
@@ -111,13 +111,13 @@ body {
           gap: 10px;
           transition: background-color 0.2s;
           .dropdown-text {
-            color: $main-blue-color;
+            color: $main-green-color;
             font-size: 24px;
             font-family: FiraGo400;
             transition: color 0.2s;
           }
           &.active-btn {
-            background-color: $main-blue-color;
+            background-color: $main-green-color;
 
             .dropdown-text {
               color: #ffffff;
