--- a/styles/page/_book-details.scss
+++ b/styles/page/_book-details.scss
@@ -50,7 +50,15 @@
       }
 
       a {
-        @include Bookbutton(#0468dc, #ffffff, 16px, 12px, none, 24px, 350);
+        @include Bookbutton(
+          $main-green-color,
+          #ffffff,
+          16px,
+          12px,
+          none,
+          24px,
+          350
+        );
         font-family: $font-family;
         text-align: center;
 
@@ -58,7 +66,7 @@
         transition: all 0.2s;
 
         &:hover {
-          background-color: rgba(0, 119, 255, 1);
+          background-color: $header-background;
         }
       }
     }
@@ -141,8 +149,8 @@
           font-weight: 500;
 
           &.focused {
-            color: #0468dc;
-            border-bottom: #0468dc solid 3px;
+            color: $main-green-color;
+            border-bottom: $main-green-color solid 3px;
           }
         }
       }
