--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -1198,6 +1198,8 @@ header .header_wrapper .burger_menu .line {
   opacity: 0;
 }
 .book-main .book-container .info-wrapper .feature-section ul li {
+  display: flex;
+  justify-content: space-between;
   font-size: 14px;
   font-weight: 350;
   color: rgba(60, 60, 67, 0.6);
